ex-02/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ex02-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ex02-app
  template:
    metadata:
      labels:
        app: ex02-app
    spec:
      containers:
        - name: ex02
          image: zsalamandra/z-hw1
          ports:
            - name: web
              containerPort: 8000
          livenessProbe:
            httpGet:
              port: 8000
              path: /health
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 2
          readinessProbe:
            httpGet:
              port: 8000
              path: /health
            initialDelaySeconds: 10
            periodSeconds: 5
