ex-02/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ex02-service
spec:
  selector:
    app: ex02-app
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 8000
  type: NodePort
